tests/samples/invalid/assign_to_array_pointer_parameter.pn
fn foo(x: &[]u8, y: &[]u8)
{
	&x = &y;
}

fn main() -> i32
{
	var x = [1, 2, 3];
	var y = [4, 5, 6];
	foo(&x, &y);
	return: 400
}
